Line height on headers to avoid cut off descenders

--- a/gui/assets/css/overrides.css
+++ b/gui/assets/css/overrides.css
@@ -14,6 +14,7 @@ body {
 
 h1, h2, h3, h4, h5 {
     font-family: "Raleway", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    line-height: 1.25;
 }
 
 ul+h5 {
